Issue #DV-22: Fixed spacing on boxlist

--- a/themes/nyiaarhus/scss/base/_mixins.scss
+++ b/themes/nyiaarhus/scss/base/_mixins.scss
@@ -56,6 +56,10 @@
       @include breakpoint($breakpoint-desk) {
         margin-top: $spacing-desk;
       }
+
+      @include breakpoint($breakpoint-bigscreen) {
+        margin-top: $spacing-bigscreen;
+      }
     }
   } @else {
     margin: $spacing-lap;
